--- a/Python/codeforces-ed156.ipynb
+++ b/Python/codeforces-ed156.ipynb
@@ -114,6 +114,418 @@
     "        stack.append(char)\n",
     "    print(stack[pos - 1], end=\"\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 3, 5, 5, 10]\n",
+      "0 2 5 3\n",
+      "2 3 5 3\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "from bisect import bisect_right\n",
+    "from typing import List\n",
+    "\n",
+    "\n",
+    "class Solution:\n",
+    "    def minOperations(self, nums: List[int]) -> int:\n",
+    "        nums.sort()\n",
+    "        n = len(nums) - 1\n",
+    "        if nums[0] == nums[-1]:\n",
+    "            return n\n",
+    "        ocr = {}\n",
+    "        for i in range(n + 1):\n",
+    "            if nums[i] != nums[i - 1]:\n",
+    "                ocr[nums[i]] = ocr.get(nums[i - 1], 0) + 1\n",
+    "        min_op = float(\"inf\")\n",
+    "        for i in range(n - 1):\n",
+    "            if nums[i] == nums[i + 1]:\n",
+    "                continue\n",
+    "            pos = bisect_right(nums, nums[i] + n)\n",
+    "            min_op = min(min_op, n - ocr[nums[pos - 1]] + ocr[nums[i]])\n",
+    "        return min_op\n",
+    "\n",
+    "\n",
+    "nums = [2, 5, 10, 3, 5, 3]\n",
+    "# nums = [3, 2, 10, 100, 3, 2, 4, 3]\n",
+    "print(Solution().minOperations(nums))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pyperclip\n",
+    "pyperclip.copy(str(list(np.random.randint(1, 1000000, 10000))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "48"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# segment tree for updating range from l to r\n",
+    "class SegmentTree:\n",
+    "    def __init__(self, arr):\n",
+    "        \"\"\"\n",
+    "        Initialize the SegmentTree object with an array of values.\n",
+    "\n",
+    "        Args:\n",
+    "        - arr: list of int - the array of values to be used to build the segment tree\n",
+    "        \"\"\"\n",
+    "        self.arr = arr\n",
+    "        self.n = len(arr)\n",
+    "        self.tree = [0] * (4 * self.n)\n",
+    "\n",
+    "    def build(self, node, start, end):\n",
+    "        \"\"\"\n",
+    "        Build the segment tree recursively.\n",
+    "\n",
+    "        Args:\n",
+    "        - node: int - the index of the current node in the tree\n",
+    "        - start: int - the start index of the current segment\n",
+    "        - end: int - the end index of the current segment\n",
+    "        \"\"\"\n",
+    "        if start == end:\n",
+    "            self.tree[node] = self.arr[start]\n",
+    "        else:\n",
+    "            mid = (start + end) // 2\n",
+    "            self.build(2 * node, start, mid)\n",
+    "            self.build(2 * node + 1, mid + 1, end)\n",
+    "            self.tree[node] = self.tree[2 * node] + self.tree[2 * node + 1]\n",
+    "\n",
+    "    def update(self, node, start, end, l, r, val):\n",
+    "        \"\"\"\n",
+    "        Update the values in the segment tree for the given range.\n",
+    "\n",
+    "        Args:\n",
+    "        - node: int - the index of the current node in the tree\n",
+    "        - start: int - the start index of the current segment\n",
+    "        - end: int - the end index of the current segment\n",
+    "        - l: int - the start index of the range to be updated\n",
+    "        - r: int - the end index of the range to be updated\n",
+    "        - val: int - the value to be added to the range\n",
+    "        \"\"\"\n",
+    "        if start > end or start > r or end < l:\n",
+    "            return\n",
+    "        if start == end:\n",
+    "            self.tree[node] += val\n",
+    "        else:\n",
+    "            mid = (start + end) // 2\n",
+    "            self.update(2 * node, start, mid, l, r, val)\n",
+    "            self.update(2 * node + 1, mid + 1, end, l, r, val)\n",
+    "            self.tree[node] = self.tree[2 * node] + self.tree[2 * node + 1]\n",
+    "\n",
+    "    def query(self, node, start, end, l, r):\n",
+    "        \"\"\"\n",
+    "        Query the sum of values in the segment tree for the given range.\n",
+    "\n",
+    "        Args:\n",
+    "        - node: int - the index of the current node in the tree\n",
+    "        - start: int - the start index of the current segment\n",
+    "        - end: int - the end index of the current segment\n",
+    "        - l: int - the start index of the range to be queried\n",
+    "        - r: int - the end index of the range to be queried\n",
+    "\n",
+    "        Returns:\n",
+    "        - int - the sum of values in the segment tree for the given range\n",
+    "        \"\"\"\n",
+    "        if start > end or start > r or end < l:\n",
+    "            return 0\n",
+    "        if start >= l and end <= r:\n",
+    "            return self.tree[node]\n",
+    "        mid = (start + end) // 2\n",
+    "        p1 = self.query(2 * node, start, mid, l, r)\n",
+    "        p2 = self.query(2 * node + 1, mid + 1, end, l, r)\n",
+    "        return p1 + p2\n",
+    "\n",
+    "\n",
+    "arr = [0] * 10\n",
+    "st = SegmentTree(arr)\n",
+    "st.update(1, 0, st.n - 1, 0, 9, 6)\n",
+    "st.query(1, 0, st.n - 1, 0, 7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "from bisect import bisect_left, bisect_right\n",
+    "\n",
+    "\n",
+    "# segment tree for updating range from l to r\n",
+    "class SegmentTree:\n",
+    "    def __init__(self, arr):\n",
+    "        \"\"\"\n",
+    "        Initialize the SegmentTree object with an array of values.\n",
+    "\n",
+    "        Args:\n",
+    "        - arr: list of int - the array of values to be used to build the segment tree\n",
+    "        \"\"\"\n",
+    "        self.arr = arr\n",
+    "        self.n = len(arr)\n",
+    "        self.tree = [0] * (4 * self.n)\n",
+    "        self.lazy = [0] * (4 * self.n)\n",
+    "\n",
+    "    def build(self, node, start, end):\n",
+    "        \"\"\"\n",
+    "        Build the segment tree recursively.\n",
+    "\n",
+    "        Args:\n",
+    "        - node: int - the index of the current node in the tree\n",
+    "        - start: int - the start index of the current segment\n",
+    "        - end: int - the end index of the current segment\n",
+    "        \"\"\"\n",
+    "        if start == end:\n",
+    "            self.tree[node] = self.arr[start]\n",
+    "        else:\n",
+    "            mid = (start + end) // 2\n",
+    "            self.build(2 * node, start, mid)\n",
+    "            self.build(2 * node + 1, mid + 1, end)\n",
+    "            self.tree[node] = self.tree[2 * node] + self.tree[2 * node + 1]\n",
+    "\n",
+    "    def update(self, node, start, end, l, r, val):\n",
+    "        \"\"\"\n",
+    "        Update the values in the segment tree for the given range.\n",
+    "\n",
+    "        Args:\n",
+    "        - node: int - the index of the current node in the tree\n",
+    "        - start: int - the start index of the current segment\n",
+    "        - end: int - the end index of the current segment\n",
+    "        - l: int - the start index of the range to be updated\n",
+    "        - r: int - the end index of the range to be updated\n",
+    "        - val: int - the value to be added to the range\n",
+    "        \"\"\"\n",
+    "        if self.lazy[node] != 0:\n",
+    "            self.tree[node] += self.lazy[node]\n",
+    "            if start != end:\n",
+    "                self.lazy[2 * node] += self.lazy[node]\n",
+    "                self.lazy[2 * node + 1] += self.lazy[node]\n",
+    "            self.lazy[node] = 0\n",
+    "\n",
+    "        if start > end or start > r or end < l:\n",
+    "            return\n",
+    "        if start >= l and end <= r:\n",
+    "            self.tree[node] += val\n",
+    "            if start != end:\n",
+    "                self.lazy[2 * node] += val\n",
+    "                self.lazy[2 * node + 1] += val\n",
+    "        else:\n",
+    "            mid = (start + end) // 2\n",
+    "            self.update(2 * node, start, mid, l, r, val)\n",
+    "            self.update(2 * node + 1, mid + 1, end, l, r, val)\n",
+    "            self.tree[node] = self.tree[2 * node] + self.tree[2 * node + 1]\n",
+    "\n",
+    "    def query(self, node, start, end, l, r):\n",
+    "        \"\"\"\n",
+    "        Query the sum of values in the segment tree for the given range.\n",
+    "\n",
+    "        Args:\n",
+    "        - node: int - the index of the current node in the tree\n",
+    "        - start: int - the start index of the current segment\n",
+    "        - end: int - the end index of the current segment\n",
+    "        - l: int - the start index of the range to be queried\n",
+    "        - r: int - the end index of the range to be queried\n",
+    "\n",
+    "        Returns:\n",
+    "        - int - the sum of values in the segment tree for the given range\n",
+    "        \"\"\"\n",
+    "        if self.lazy[node] != 0:\n",
+    "            self.tree[node] += self.lazy[node]\n",
+    "            if start != end:\n",
+    "                self.lazy[2 * node] += self.lazy[node]\n",
+    "                self.lazy[2 * node + 1] += self.lazy[node]\n",
+    "            self.lazy[node] = 0\n",
+    "\n",
+    "        if start > end or start > r or end < l:\n",
+    "            return 0\n",
+    "        if start >= l and end <= r:\n",
+    "            return self.tree[node]\n",
+    "        mid = (start + end) // 2\n",
+    "        p1 = self.query(2 * node, start, mid, l, r)\n",
+    "        p2 = self.query(2 * node + 1, mid + 1, end, l, r)\n",
+    "        return p1 + p2\n",
+    "\n",
+    "\n",
+    "class Solution:\n",
+    "    def fullBloomFlowers(self, flowers: List[List[int]], people: List[int]) -> List[int]:\n",
+    "        pp = sorted([(p, i) for i, p in enumerate(people)])\n",
+    "        people = [p[0] for p in pp]\n",
+    "        n = len(people)\n",
+    "        sg = SegmentTree([0] * n)\n",
+    "        for f, s in flowers:\n",
+    "            l, r = bisect_left(people, f), bisect_right(people, s)\n",
+    "            sg.update(1, 0, n - 1, l, r - 1, 1)\n",
+    "        for idx, p in enumerate(pp):\n",
+    "            people[p[1]] = sg.query(1, 0, n - 1, idx, idx)\n",
+    "        return people\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pyperclip\n",
+    "pyperclip.copy(str(list(np.random.randint(1, 1000, 50000))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pyperclip\n",
+    "a = np.random.randint(1, 1000, (5000, 2))\n",
+    "a = np.sort(a, axis=1)\n",
+    "pyperclip.copy(str(list(map(list, a))))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = [1,2,2,2,3,3,3]\n",
+    "bisect_left(x,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# core of segment tree to implement all other functions\n",
+    "class CoreSegmentTree:\n",
+    "    def __init__(self, arr):\n",
+    "        \"\"\"\n",
+    "        Initialize the CoreSegmentTree object with an array of values.\n",
+    "\n",
+    "        Args:\n",
+    "        - arr: list of int - the array of values to be used to build the segment tree\n",
+    "        \"\"\"\n",
+    "        self.arr = arr\n",
+    "        self.n = len(arr)\n",
+    "        self.tree = [0] * (4 * self.n)\n",
+    "        self.lazy = [0] * (4 * self.n)\n",
+    "        self.op = ['max', 'min', 'sum', 'gcd', 'lcm', 'xor', 'or', 'and']\n",
+    "\n",
+    "    def build(self, node, start, end):\n",
+    "        \"\"\"\n",
+    "        Build the segment tree recursively.\n",
+    "\n",
+    "        Args:\n",
+    "        - node: int - the index of the current node in the tree\n",
+    "        - start: int - the start index of the current segment\n",
+    "        - end: int - the end index of the current segment\n",
+    "        \"\"\"\n",
+    "        if start == end:\n",
+    "            self.tree[node] = self.arr[start]\n",
+    "        else:\n",
+    "            mid = (start + end) // 2\n",
+    "            self.build(2 * node, start, mid)\n",
+    "            self.build(2 * node + 1, mid + 1, end)\n",
+    "            if self.op == 'max':\n",
+    "                self.tree[node] = max(self.tree[2 * node], self.tree[2 * node + 1])\n",
+    "            elif self.op == 'min':\n",
+    "                self.tree[node] = min(self.tree[2 * node], self.tree[2 * node + 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def findInMountainArray(self, target: int, mountain_arr: 'MountainArray') -> int:\n",
+    "        # Save the length of the mountain array\n",
+    "        length = mountain_arr.length()\n",
+    "\n",
+    "        # 1. Find the index of the peak element\n",
+    "        low = 1\n",
+    "        high = length - 2\n",
+    "        while low != high:\n",
+    "            test_index = (low + high) // 2\n",
+    "            if mountain_arr.get(test_index) < mountain_arr.get(test_index + 1):\n",
+    "                low = test_index + 1\n",
+    "            else:\n",
+    "                high = test_index\n",
+    "        peak_index = low\n",
+    "\n",
+    "        # 2. Search in the strictly increasing part of the array\n",
+    "        low = 0\n",
+    "        high = peak_index\n",
+    "        while low != high:\n",
+    "            test_index = (low + high) // 2\n",
+    "            if mountain_arr.get(test_index) < target:\n",
+    "                low = test_index + 1\n",
+    "            else:\n",
+    "                high = test_index    \n",
+    "        # Check if the target is present in the strictly increasing part\n",
+    "        if mountain_arr.get(low) == target:\n",
+    "            return low\n",
+    "        \n",
+    "        # 3. Otherwise, search in the strictly decreasing part\n",
+    "        low = peak_index + 1\n",
+    "        high = length - 1\n",
+    "        while low != high:\n",
+    "            test_index = (low + high) // 2\n",
+    "            if mountain_arr.get(test_index) > target:\n",
+    "                low = test_index + 1\n",
+    "            else:\n",
+    "                high = test_index\n",
+    "        # Check if the target is present in the strictly decreasing part\n",
+    "        if mountain_arr.get(low) == target:\n",
+    "            return low\n",
+    "        \n",
+    "        # Target is not present in the mountain array\n",
+    "        return -1"
+   ]
   }
  ],
  "metadata": {
