Code moi tay :)

--- a/Python/project1-week4.ipynb
+++ b/Python/project1-week4.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,10 +67,8 @@
    "source": [
     "import sys\n",
     "\n",
-    "sys.stdin = open(\n",
-    "    r\"C:\\Users\\nguye\\Documents\\Code\\Programming\\C++\\test.inp\", \"r\")\n",
-    "sys.stdout = open(\n",
-    "    r\"C:\\Users\\nguye\\Documents\\Code\\Programming\\C++\\test.out\", \"w\")\n",
+    "sys.stdin = open(r\"C:\\Users\\nguye\\Documents\\Code\\Programming\\C++\\test.inp\", \"r\")\n",
+    "sys.stdout = open(r\"C:\\Users\\nguye\\Documents\\Code\\Programming\\C++\\test.out\", \"w\")\n",
     "input = sys.stdin.readline\n",
     "ocr = {}\n",
     "n = int(input())\n",
@@ -132,45 +130,6 @@
     "        else:\n",
     "            print(0)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from math import comb\n",
-    "comb(5,2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Solution:\n",
-    "    def getRow(self, rowIndex: int) -> List[int]:\n",
-    "        return [comb(rowIndex, i) for i in range(rowIndex + 1)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
