Add maximum flow algorithm implementation and update input/output files

--- a/Python/project1-week5.ipynb
+++ b/Python/project1-week5.ipynb
@@ -334,44 +334,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "81"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "5 ^ 23 ^ 91 ^ 24"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "81"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "class Solution:\n",
-    "    def findArray(self, pref: List[int]) -> List[int]:\n",
-    "        return [pref[i] ^ pref[i - 1] for i in range(1,len(pref))]"
+    "import sys\n",
+    "from collections import defaultdict, deque\n",
+    "\n",
+    "# sys.stdin = open(\"input.txt\", \"r\")\n",
+    "# sys.stdout = open(\"output.txt\", \"w\")\n",
+    "input = sys.stdin.readline\n",
+    "# --- Maximum Flow in a Graph ---\n",
+    "\n",
+    "\n",
+    "class Graph:\n",
+    "    def __init__(self, n: int):\n",
+    "        self.n = n\n",
+    "        self.parent = [-1] * n\n",
+    "        self.edge = defaultdict(int)\n",
+    "\n",
+    "    def addEdge(self, u, v, capacity):\n",
+    "        self.edge[(u, v)] = capacity\n",
+    "\n",
+    "    def bfs(self, source, sink):\n",
+    "        visited = [False] * self.n\n",
+    "        q = deque()\n",
+    "        q.append(source)\n",
+    "        visited[source] = True\n",
+    "        while q:\n",
+    "            u = q.popleft()\n",
+    "            for i in range(self.n):\n",
+    "                if not visited[i] and self.edge[(u, i)] > 0:\n",
+    "                    visited[i] = True\n",
+    "                    self.parent[i] = u\n",
+    "                    if i == sink:\n",
+    "                        return True\n",
+    "                    q.append(i)\n",
+    "\n",
+    "        return False\n",
+    "\n",
+    "    def fordFulkerson(self, source, sink):\n",
+    "        maxFlow = 0\n",
+    "        while self.bfs(source, sink):\n",
+    "            pathFlow = float(\"inf\")\n",
+    "            v = sink\n",
+    "            while v != source:\n",
+    "                u = self.parent[v]\n",
+    "                pathFlow = min(pathFlow, self.edge[(u, v)])\n",
+    "                v = u\n",
+    "            maxFlow += pathFlow\n",
+    "            v = sink\n",
+    "            while v != source:\n",
+    "                u = self.parent[v]\n",
+    "                self.edge[(u, v)] -= pathFlow\n",
+    "                self.edge[(v, u)] += pathFlow\n",
+    "                v = u\n",
+    "        return maxFlow\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    n, m = map(int, input().split())\n",
+    "    g = Graph(n)\n",
+    "    s, t = map(int, input().split())\n",
+    "    for _ in range(m):\n",
+    "        u, v, w = map(int, input().split())\n",
+    "        g.addEdge(u - 1, v - 1, w)\n",
+    "    print(g.fordFulkerson(s - 1, t - 1))"
    ]
   }
  ],
