Refactored jobshop_ft06 function to jssp function

--- a/Python/jssp-ortools.ipynb
+++ b/Python/jssp-ortools.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1126,7 +1126,7 @@
     "from ortools.sat.python import cp_model\n",
     "\n",
     "\n",
-    "def jobshop_ft06():\n",
+    "def jssp():\n",
     "    \"\"\"Solves the ft06 jobshop.\"\"\"\n",
     "    # Creates the solver.\n",
     "    model = cp_model.CpModel()\n",
@@ -1229,7 +1229,7 @@
     "        print(machine_to_jobs, all_tasks)\n",
     "\n",
     "\n",
-    "jobshop_ft06()"
+    "jssp()"
    ]
   }
  ],
