Update execution counts and add new solution to leet code problem.

--- a/Python/leet-code-p7.ipynb
+++ b/Python/leet-code-p7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "5"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,14 +51,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
     "import pyperclip\n",
-    "x = list(set([random.randint(1, 100000) for _ in range(100)]))\n",
+    "x = list([random.randint(50, 1000) for _ in range(100)])\n",
     "pyperclip.copy(str(x))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "\n",
+    "class Solution:\n",
+    "    def eliminateMaximum(self, dist: List[int], speed: List[int]) -> int:\n",
+    "        time = [u / v for u, v in zip(dist, speed)]\n",
+    "        time.sort()\n",
+    "        ans = shot = 0\n",
+    "        for i in time:\n",
+    "            if shot < i:\n",
+    "                ans += 1\n",
+    "                shot += 1\n",
+    "            else:\n",
+    "                return ans\n",
+    "        return ans\n",
+    "\n",
+    "\n",
+    "dist = [1, 1, 2, 3]\n",
+    "speed = [1, 1, 1, 1]\n",
+    "# dist = [3,2,4]\n",
+    "# speed = [5,3,2]\n",
+    "Solution().eliminateMaximum(dist, speed)"
    ]
   }
  ],
