JSSP with MIP, modify some code

--- a/Python/leet-code-p7.ipynb
+++ b/Python/leet-code-p7.ipynb
@@ -101,6 +101,125 @@
     "# speed = [5,3,2]\n",
     "Solution().eliminateMaximum(dist, speed)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "\n",
+    "class Solution:\n",
+    "    def countPalindromicSubsequence(self, s: str) -> int:\n",
+    "        cnt = Counter(s)\n",
+    "        n = len(s) - 1\n",
+    "        chars = [i for i in cnt if cnt[i] > 1]\n",
+    "        ans = 0\n",
+    "        for i in chars:\n",
+    "            start, end = 0, n\n",
+    "            while s[start] != i:\n",
+    "                start += 1\n",
+    "            while s[end] != i:\n",
+    "                end -= 1\n",
+    "            ans += len(set(s[start + 1 : end]))\n",
+    "        return ans\n",
+    "\n",
+    "\n",
+    "s = \"bbcbaba\"\n",
+    "Solution().countPalindromicSubsequence(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import string\n",
+    "import numpy as np\n",
+    "\n",
+    "st = np.random.choice(np.array(list(string.ascii_lowercase)), 100000)\n",
+    "import pyperclip\n",
+    "pyperclip.copy(''.join(st))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1, 2, 2, 2]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def maximumElementAfterDecrementingAndRearranging(self, arr: list[int]) -> int:\n",
+    "        arr.sort()\n",
+    "        ans = 0\n",
+    "        for i in range(1, len(arr)):\n",
+    "            if arr[i] > arr[i - 1] + 1:\n",
+    "                arr[i] = arr[i - 1] + 1\n",
+    "        return arr[-1]\n",
+    "\n",
+    "\n",
+    "arr = [2, 2, 1, 2, 1]\n",
+    "# arr = [100,1,1000]\n",
+    "# arr = [1,2,3,4,5]\n",
+    "Solution().maximumElementAfterDecrementingAndRearranging(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.random.randint(1, 1_000_000_000, 100000)\n",
+    "import pyperclip\n",
+    "pyperclip.copy(str(list(arr)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'aGVsbG8gd29ybGQ=\\n'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import base64\n",
+    "base64.encodebytes(b'hello world')"
+   ]
   }
  ],
  "metadata": {
