modify, add code, prog tech, prj1

--- a/Python/leet-code-p7.ipynb
+++ b/Python/leet-code-p7.ipynb
@@ -202,23 +202,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "b'aGVsbG8gd29ybGQ=\\n'"
+       "'100'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import base64\n",
-    "base64.encodebytes(b'hello world')"
+    "from typing import List\n",
+    "\n",
+    "\n",
+    "class Solution:\n",
+    "    def findDifferentBinaryString(self, nums: List[str]) -> str:\n",
+    "        n = len(nums)\n",
+    "        ans = \"\"\n",
+    "        for i in range(n):\n",
+    "            d = {\"0\": 0, \"1\": 0}\n",
+    "            for num in nums:\n",
+    "                d[num[i]] += 1\n",
+    "            ans += \"0\" if d[\"1\"] >= d[\"0\"] else \"1\"\n",
+    "            if d[ans[-1]] == 0:\n",
+    "                return ans + \"0\" * (n - 1 - i)\n",
+    "        return ans\n",
+    "\n",
+    "\n",
+    "nums = [\"011\", \"011\", \"001\"]\n",
+    "Solution().findDifferentBinaryString(nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0001110010'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random\n",
+    "# random binary string\n",
+    "n = 10\n",
+    "s = ''.join([random.choice(\"01\") for _ in range(n)])\n",
+    "s"
    ]
   }
  ],
