Add new files and update existing files

--- a/Python/leet-code-p7.ipynb
+++ b/Python/leet-code-p7.ipynb
@@ -261,6 +261,79 @@
     "s = ''.join([random.choice(\"01\") for _ in range(n)])\n",
     "s"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "37"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "\n",
+    "class Solution:\n",
+    "    def garbageCollection(self, garbage: List[str], travel: List[int]) -> int:\n",
+    "        n = len(garbage)\n",
+    "        mgp = [\n",
+    "            {\"G\": i.count(\"G\"), \"P\": i.count(\"P\"), \"M\": i.count(\"M\")} for i in garbage\n",
+    "        ]\n",
+    "        n = len(garbage) - 1\n",
+    "        for i in range(1, n):\n",
+    "            travel[i] += travel[i - 1]\n",
+    "\n",
+    "        def count(c):\n",
+    "            idx = n\n",
+    "            while mgp[idx][c] == 0 and idx >= 0:\n",
+    "                idx -= 1\n",
+    "            ans = 0\n",
+    "            if idx > 0:\n",
+    "                ans += travel[idx - 1]\n",
+    "            for i in range(idx + 1):\n",
+    "                ans += mgp[i][c]\n",
+    "            return ans\n",
+    "\n",
+    "        return count(\"P\") + count(\"G\") + count(\"M\")\n",
+    "\n",
+    "\n",
+    "# garbage = [\"G\", \"P\", \"GP\", \"GG\"]\n",
+    "# travel = [2, 4, 3]\n",
+    "garbage = [\"MMM\",\"PGM\",\"GP\"]\n",
+    "travel = [3,10]\n",
+    "Solution().garbageCollection(garbage, travel)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pyperclip\n",
+    "x = [\"\".join(np.random.choice([\"P\", \"G\",\"M\"],np.random.randint(1,10))) for _ in range(100)]\n",
+    "travel = list(np.random.randint(1,100,99))\n",
+    "pyperclip.copy(str(x).replace(\"'\",\"\\\"\"))\n",
+    "# pyperclip.copy(str(travel))"
+   ]
   }
  ],
  "metadata": {
