--- a/Python/leet-code-p7.ipynb
+++ b/Python/leet-code-p7.ipynb
@@ -334,6 +334,29 @@
     "pyperclip.copy(str(x).replace(\"'\",\"\\\"\"))\n",
     "# pyperclip.copy(str(travel))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tqdm'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\nguye\\Documents\\Code\\Programming\\Python\\leet-code-p7.ipynb Cell 12\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/nguye/Documents/Code/Programming/Python/leet-code-p7.ipynb#X14sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtqdm\u001b[39;00m \u001b[39mimport\u001b[39;00m tqdm\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/nguye/Documents/Code/Programming/Python/leet-code-p7.ipynb#X14sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m tqdm(\u001b[39mrange\u001b[39m(\u001b[39m10000\u001b[39m)):\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/nguye/Documents/Code/Programming/Python/leet-code-p7.ipynb#X14sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     \u001b[39mpass\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'tqdm'"
+     ]
+    }
+   ],
+   "source": [
+    "from tqdm import tqdm\n",
+    "for i in tqdm(range(10000)):\n",
+    "    pass"
+   ]
   }
  ],
  "metadata": {
