--- a/Python/new-lc-1.ipynb
+++ b/Python/new-lc-1.ipynb
@@ -251,6 +251,209 @@
     "    if '.' in file:\n",
     "        shutil.move('../IT3040/' + file, '../IT3040/lab01/' + file)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1011000100111'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = bin(5671)[2:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15670033"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import deque, defaultdict\n",
+    "\n",
+    "\n",
+    "class Solution:\n",
+    "\n",
+    "    def minimumOneBitOperations(self, n: int) -> int:\n",
+    "        d = {}\n",
+    "        q = deque([n])\n",
+    "        d[n] = 0\n",
+    "        inf = float(\"inf\")\n",
+    "        while q:\n",
+    "            num = q.popleft()\n",
+    "            if num == 0:\n",
+    "                return d[num]\n",
+    "            dist = d[num]\n",
+    "            k = num - 1 if num % 2 else num + 1\n",
+    "            if k not in d:\n",
+    "                q.append(k)\n",
+    "            d[k] = min(d.get(k, inf), dist + 1)\n",
+    "            time = 0\n",
+    "            while num % 2 == 0:\n",
+    "                num >>= 1\n",
+    "                time += 1\n",
+    "            if num > 1:\n",
+    "                num -= 2 if (num - 1) % 4 else -2\n",
+    "                while time > 0:\n",
+    "                    num <<= 1\n",
+    "                    time -= 1\n",
+    "                if num not in d:\n",
+    "                    q.append(num)\n",
+    "                d[num] = min(d.get(num, inf), dist + 1)\n",
+    "\n",
+    "\n",
+    "n = 10**7 + 25\n",
+    "\n",
+    "\n",
+    "Solution().minimumOneBitOperations(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "44"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from itertools import permutations\n",
+    "\n",
+    "count = 0\n",
+    "for i in permutations([1, 2, 3, 4, 5]):\n",
+    "    if i[0] != 1 and i[1] != 2 and i[2] != 3 and i[3] != 4 and i[4] != 5:\n",
+    "        count += 1\n",
+    "count\n",
+    "# this problem is equivalent to find the number of derangement of 5 elements, formula is n! * (1 - 1/1! + 1/2! - 1/3! + ... + (-1)^n / n!)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 0 1 3 5 4\n",
+      "1 2 4 5 0 3\n",
+      "2 3 5 0 1 4\n",
+      "1 0 2 3 4 5\n",
+      "2 1 4 5 0 3\n",
+      "1 3 5 0 4 2\n",
+      "\n",
+      "1 3 6 7 3 6\n",
+      "8 5 10 10 10 4\n",
+      "5 4 8 9 1 7\n",
+      "5 5 5 3 8 9\n",
+      "9 3 5 4 3 1\n",
+      "3 3 9 10 4 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "durations = [\n",
+    "    [1, 3, 6, 7, 3, 6],\n",
+    "    [8, 5, 10, 10, 10, 4],\n",
+    "    [5, 4, 8, 9, 1, 7],\n",
+    "    [5, 5, 5, 3, 8, 9],\n",
+    "    [9, 3, 5, 4, 3, 1],\n",
+    "    [3, 3, 9, 10, 4, 1],\n",
+    "]\n",
+    "\n",
+    "machines = [\n",
+    "    [2, 0, 1, 3, 5, 4],\n",
+    "    [1, 2, 4, 5, 0, 3],\n",
+    "    [2, 3, 5, 0, 1, 4],\n",
+    "    [1, 0, 2, 3, 4, 5],\n",
+    "    [2, 1, 4, 5, 0, 3],\n",
+    "    [1, 3, 5, 0, 4, 2],\n",
+    "]\n",
+    "#print\n",
+    "for i in machines:\n",
+    "    print(*i)\n",
+    "print()\n",
+    "# print the duration of each machine\n",
+    "for i in durations:\n",
+    "    print(*i)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 1 2 4 6 5\n",
+      "2 3 5 6 1 4\n",
+      "3 4 6 1 2 5\n",
+      "2 1 3 4 5 6\n",
+      "3 2 5 6 1 4\n",
+      "2 4 6 1 5 3\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "x = np.array(machines)\n",
+    "x +=1 \n",
+    "for i in x:\n",
+    "    print(*i)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2, 5}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{1, 2, 3, 5, 7} & {2, 4, 5, 6, 9}"
+   ]
   }
  ],
  "metadata": {
