--- a/Python/excel_test.ipynb
+++ b/Python/excel_test.ipynb
@@ -147,16 +147,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "SortedSet([(-2, 'chó'), (1, 'ga'), (5, 'cá'), (24, 'chuột'), (143, 'mèo')])"
+       "1"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,190 @@
    "source": [
     "from sortedcontainers import SortedSet\n",
     "\n",
-    "s = SortedSet([(1,\"ga\"),(-2,\"chó\"),(143,\"mèo\"),(24,\"chuột\"),(5,\"cá\")], key=lambda x: (x[0], x[1]))\n"
+    "s = SortedSet([(1,\"ga\"),(-2,\"chó\"),(143,\"mèo\"),(24,\"chuột\"),(5,\"cá\")], key=lambda x: (x[0], x[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   product_id  new_price change_date\n",
+      "0           1         20  2019-08-14\n",
+      "1           2         50  2019-08-14\n",
+      "2           1         30  2019-08-15\n",
+      "3           1         35  2019-08-16\n",
+      "4           2         65  2019-08-17\n",
+      "5           3         20  2019-08-18\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Define the data for the DataFrame\n",
+    "data = {\n",
+    "    'product_id': [1, 2, 1, 1, 2, 3],\n",
+    "    'new_price': [20, 50, 30, 35, 65, 20],\n",
+    "    'change_date': pd.to_datetime(['2019-08-14', '2019-08-14', '2019-08-15', '2019-08-16', '2019-08-17', '2019-08-18'])\n",
+    "}\n",
+    "\n",
+    "# Create the DataFrame\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Print the DataFrame\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "46610674441390059"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from math import comb\n",
+    "comb(299,9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 4]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a= [1,3,4]\n",
+    "a[1:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing 1335-leetcode.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile 1335-leetcode.py\n",
+    "from typing import List\n",
+    "from functools import cache\n",
+    "\n",
+    "\n",
+    "class Solution:\n",
+    "    def minDifficulty(self, jobDifficulty: List[int], d: int) -> int:\n",
+    "        n = len(jobDifficulty)\n",
+    "\n",
+    "        @cache\n",
+    "        def solve(i, days):\n",
+    "            if days == 1:\n",
+    "                return max(jobDifficulty[i : n + 1])\n",
+    "            ans = float(\"inf\")\n",
+    "            for j in range(i + 1, n - days + 2):\n",
+    "                ans = min(ans, max(jobDifficulty[i:j], default=0) + solve(j, days - 1))\n",
+    "            return ans\n",
+    "\n",
+    "        return solve(0, d) if n >= d else -1\n",
+    "\n",
+    "\n",
+    "# jobDifficulty = [187, 749, 953, 160, 150, 538, 923, 353, 490, 177]\n",
+    "jobDifficulty = [6, 5, 4, 3, 2, 1]\n",
+    "d = 3\n",
+    "Solution().minDifficulty(jobDifficulty, d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "import pyperclip\n",
+    "\n",
+    "pyperclip.copy(str(list(np.random.randint(1,1000,10))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "words = [\"abc\",\"aabc\",\"bc\"]\n",
+    "c = Counter()\n",
+    "for word in words:\n",
+    "    c.update(word)\n",
+    "values = list(c.values())   \n",
+    "all(values[0] == value for value in values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3024"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a,b,c = 1,2,3\n",
+    "s = 6\n",
+    "for i in range(4,2017):\n",
+    "    a,b,c = b,c, a + b - c\n",
+    "    s += c\n",
+    "s"
    ]
   }
  ],
